--- a/style.css
+++ b/style.css
@@ -1,50 +1,41 @@
 body {
-  background: linear-gradient(to right, #fbd3e9, #bb337d);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  height: 100vh; /* Mengisi tinggi seluruh viewport */
+  margin: 0;
+  background-color: black;
+  transition: background-color 0.5s ease;
 }
 
-h1 {
-  display: block;
+.lampu {
+  margin: 0;
+  padding: 10px;
+  display: flex;
+  text-align: justify content;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  transition: opacity 1s ease; /* Efek transisi untuk perubahan opasitas */
+}
+.lampu-on {
+  background-color: rgb(241, 241, 178); /* Warna latar belakang saat lampu dinyalakan */
+}
+
+.hidden {
+  display: none;
+}
+
+.musik { margin: 0;
+  padding: 10px;
   text-align: center;
-  font-size: 100px;
-  margin-top: 0.67em;
-  margin-bottom: 0.67em;
-  margin-left: 0;
-  margin-right: 0;
-  font-weight: bold;
-  color: aliceblue;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  transition: opacity 1s ease; /* Efek transisi untuk perubahan opasitas */
 }
-
-p {
-  display: block;
+.acara { margin: 0;
+  padding: 10px;
   text-align: center;
-  font-size: 130px;
- margin: 0;
- margin-top: -50;
-  font-weight: bold;
-  color: aliceblue;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  transition: opacity 1s ease; /* Efek transisi untuk perubahan opasitas */
 }
 
-#output {
-  font-family: Circular, a geometric sans-serif;
-  font-size: 50px;
-  text-align: center;
-  font-weight: bold;
-  color: aliceblue;
-}
 
-#love {
-  color: #fa0b47;
-  font-size: 200px;
-  text-align: center;
-  display: block;
-  animation: moveUpDown 2s infinite alternate;
-}
-
-@keyframes moveUpDown {
-  0% {
-    transform: translateY(0); /* Initial position */
-  }
-  100% {
-    transform: translateY(-20px); /* Move upwards by 20 pixels */
-  }
-}
